--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Todo App</title>
-    <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">    
+    <link rel="stylesheet" href="style.css" type="css" media="screen" charset="utf-8">    
   </head>
   <body>
     <div class="container">
@@ -22,7 +23,7 @@
       </ul>
     </div>
 
-    <script type="text/javascript" src="web.js"></script>
+    <script type="javascript" src="web.js"></script>
 
   </body>
 </html>
