--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <title>Todo App</title>
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">    
