--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Todo App</title>
-    <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">    
+    <link rel="stylesheet" href="./style.css" type="text/css" media="screen" charset="utf-8">    
   </head>
   <body>
     <div class="container">
@@ -23,7 +23,7 @@
       </ul>
     </div>
 
-    <script type="text/javascript" src="web.js"></script>
+    <script type="text/javascript" src="./web.js"></script>
 
   </body>
 </html>
