--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Todo App</title>
-    <link rel="stylesheet" href="./style.css" type="text/css" media="screen" charset="utf-8">    
+    <link rel="stylesheet" href="./style.css" type="text/css">    
   </head>
   <body>
     <div class="container">
